2004-02-25  Masao Mutoh  <mutoh@highway.ne.jp>

	* lib/libglade2.rb: Add GladeXML#custom_creation_methods.
	* rbglade.c: Add GladeXML.set_custom_widget_handler.
	* sample/custom.[rb|glade}: Added for custom widget.
	* bin/ruby-glade-create-template: Support custom widget.
	
2004-02-04  Masao Mutoh  <mutoh@highway.ne.jp>

	* lib/libglade2.rb: Improve GladeXML#widget_names.

2004-02-04  Archit Baweja  <bighead@users.sourceforge.net>

	* lib/libglade2.rb: Add GladeXML#widget_names.

2004-02-01  Archit Baweja  <bighead@users.sourceforge.net>

	* rbglade.c: Add GladeXML#filename.
	
2004-01-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbglade.c: Add GladeXML#[] as an alias of GladeXML#get_widget.
	* sample/test.rb, treeview.rb: ditto.

2003-08-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* lib/libglade2.rb: Fix a bug for GladeXML#connect.
	Reported by Martin Povolny.
	* bin/ruby-glade-create-template: ditto.
	* depend: Fix installation error with ruby-1.6.x.
	Reported by Vincent Isambart.

2003-08-28  Masao Mutoh  <mutoh@highway.ne.jp>
                                                                                
	* extconf.rb: Exit with 1 when the package is not found.

2003-08-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbglade.c: Fix bug caused by previous changes.

2003-08-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbglade.c: Fix GLadeXML.new parameter of block/proc.

2003-08-16  Soila Jani <soila@cs.tut.fi>

	* rbglade.c, lib/libglade2.rb: Add a 'after' parameter to GladeXML.connect.
	It allows to connect signal_connect_after().

2003-05-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb position changes.
	* src/rbgtk.h: Remove a line for including rbgobject.h.
	(because it is included by rbgtk.h)

2003-03-21  Masao Mutoh  <mutoh@highway.ne.jp>

	* bin/ruby-glade-create-tempate: Work with Ruby-1.6.x.

2003-02-14  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: Use ../mkmf-gnome2.rb

2003-02-02  Masao Mutoh  <mutoh@highway.ne.jp>
