@@ -1,3 +1,7 @@
+2004-03-04  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* rbglade.c: Add GladeXML#require, #provide.
+
 2004-02-25  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* lib/libglade2.rb: Add GladeXML#custom_creation_methods.
